; ModuleID = '/home/carl/AnghaBench/php-src/ext/sockets/extr_multicast.c_php_mcast_block_source.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/sockets/extr_multicast.c_php_mcast_block_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@BLOCK_SOURCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @php_mcast_block_source(i32* %0, i32 %1, %struct.sockaddr* %2, i32 %3, %struct.sockaddr* %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.sockaddr*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.sockaddr*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store %struct.sockaddr* %2, %struct.sockaddr** %10, align 8
  store i32 %3, i32* %11, align 4
  store %struct.sockaddr* %4, %struct.sockaddr** %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load %struct.sockaddr*, %struct.sockaddr** %10, align 8
  %18 = load i32, i32* %11, align 4
  %19 = load %struct.sockaddr*, %struct.sockaddr** %12, align 8
  %20 = load i32, i32* %13, align 4
  %21 = load i32, i32* %14, align 4
  %22 = load i32, i32* @BLOCK_SOURCE, align 4
  %23 = call i32 @_php_mcast_source_op(i32* %15, i32 %16, %struct.sockaddr* %17, i32 %18, %struct.sockaddr* %19, i32 %20, i32 %21, i32 %22)
  ret i32 %23
}

declare dso_local i32 @_php_mcast_source_op(i32*, i32, %struct.sockaddr*, i32, %struct.sockaddr*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
